# MeiKTVCoreAV

./: build.gradle  readme.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/aimei/meiktv/meiktvcoreav/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/aimei/meiktv/meiktvcoreav/: MainActivity.kt
app/src/main/res/drawable/: select.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/aimei/meiktv/meiktvcoreav/: ExampleUnitTest.kt
coreav/: CMakeLists.txt  build.gradle
coreav/src/androidTest/java/com/aimei/meiktv/coreav/: ExampleInstrumentedTest.kt
coreav/src/main/: AndroidManifest.xml
coreav/src/main/cpp/: EQEffect.cpp  EQEffect.h  EQParams.cpp  EQParams.h  EchoEffect.cpp  EchoEffect.h  EchoParams.cpp  EchoParams.h  FilterParams.cpp  FilterParams.h  HighPassEffect.cpp  HighPassEffect.h  Log.h  LowPassEffect.cpp  LowPassEffect.h  ReverbEffect.cpp  ReverbEffect.h  ReverbParams.cpp  ReverbParams.h  SoxBaseEffect.cpp  SoxBaseEffect.h  SoxManager.cpp  SoxManager.h  VolumeEffect.cpp  VolumeEffect.h  native-lib.cpp
coreav/src/main/java/com/aimei/meiktv/coreav/: AudioController.kt  AudioEffect.kt  AudioEffectHandler.kt  AudioHandle.kt  AudioRecordHandler.kt  AudioTrackHandler.kt  PCMData.kt  PCMDataManager.kt
coreav/src/test/java/com/aimei/meiktv/coreav/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
